k8s/traefik/ingressroute-catchall.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: catch-all
  namespace: sla-monitoring
spec:
  entryPoints:
    - web
  routes:
    - match: PathPrefix(`/`)
      kind: Rule
      services:
        - name: frontend
          port: 3000
